--- a/content/posts/2009-01-13-phishing.en.md
+++ b/content/posts/2009-01-13-phishing.en.md
@@ -4,6 +4,7 @@ date: 2009-01-13T23:50:43+03:30
 layout: single
 author_profile: true
 url: 2009/01/13/phishing/
+shortlink: https://g.omid.dev/q9W1gWu
 tags:
   - phishing
   - Security
